--- a/styles/global.css
+++ b/styles/global.css
@@ -871,6 +871,7 @@ button:active,
   }
   100% {
     transform: translateX(0);
+
     opacity: 1;
   }
 }
@@ -880,6 +881,10 @@ button:active,
 }
 
 @keyframes flyOutLeftFlyInRight {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
   49% {
     transform: translateX(-100px);
     opacity: 0;
@@ -898,12 +903,17 @@ button:active,
 }
 
 @keyframes flyOutRightFlyInLeft {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
   49% {
     transform: translateX(200px);
     opacity: 0;
   }
   50% {
     transform: translateX(-200px);
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
